Fix layering (#1292)
Our z-index values were getting out of control and some elements were covering
others inappropriately. I exhaustively catalogued our layers and came up
with an organising scheme, maybe not the best names, but ¯\_(ツ)_/¯

Thanks to @jonsuh for the technique!
https://jonsuh.com/blog/organizing-z-index-with-sass/

--- a/app/styles/app/mixins.sass
+++ b/app/styles/app/mixins.sass
@@ -47,7 +47,6 @@
       .job-lang:hover,
       .job-env:hover
         overflow: visible
-        z-index: 80
         .label-align
           background-color: $color
         &:after
