--- a/app/styles/app/modules/avatar.sass
+++ b/app/styles/app/modules/avatar.sass
@@ -20,7 +20,6 @@
     border-radius: 50%
     background: white
     transform: scale(.95)
-    z-index: 1
     &:after
       content: attr(data-initials)
       +absoluteCenter
@@ -33,7 +32,6 @@
 
   .real-avatar
     +absoluteCenter
-    z-index: 2
     border-radius: 50%
     width: 100%
     height: 100%
